fix(page/nav): fix overflow on body and scaling on non-hover devices

--- a/src/css/snippets/page/nav.css
+++ b/src/css/snippets/page/nav.css
@@ -1,12 +1,17 @@
-.page-nav {
+.page-nav-wrapper {
   position: absolute;
   top: 0;
   right: 0;
   left: 0;
   z-index: 3;
+  overflow-x: hidden;
+}
+
+.page-nav {
   --page-nav-scale-factor: calc(40/22);
   --page-nav-scale: 1;
   --page-nav-transform-origin: 50% 50% 0;
+  position: relative;
 }
 
 .font--inverted .page-nav {
@@ -58,10 +63,9 @@
     padding-top: calc(var(--body-font-size) * 1/22 * var(--page-nav-scale-factor));
     padding-bottom: calc(var(--body-font-size) * 3/22 * var(--page-nav-scale-factor));
   }
-
 }
 
-@media (min-width: 576px) {
+@media (hover: hover) and (min-width: 576px) {
   .page-nav {
     transition: transform 0.05s;
     transform: scale(var(--page-nav-scale));
